--- a/src/html/partials/cpu.html
+++ b/src/html/partials/cpu.html
@@ -18,7 +18,7 @@
         </div>
         
         <div class="col-md-7 col-sm-12 chart-container">
-            <div google-chart chart="usageHistory" class="chart"></div>
+            <div history-chart chart="usageHistory" class="chart"></div>
         </div>
     </div>
     
@@ -28,7 +28,7 @@
             <div google-chart chart="temperatureGauge" class="chart"></div>
         </div>
         <div class="col-md-7 col-sm-12 chart-container">
-            <div google-chart chart="temperatureHistory" class="chart"></div>
+            <div history-chart chart="temperatureHistory" class="chart"></div>
         </div>
     </div>
 </div>
