--- a/src/html/partials/memory.html
+++ b/src/html/partials/memory.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
         <div class="col-lg-5 col-sm-12 chart-container">
-            <div google-chart chart="ramHistory" class="chart"></div>
+            <div history-chart chart="ramHistory" class="chart"></div>
         </div>
     </div>
 
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div class="col-lg-5 col-sm-12 chart-container">
-            <div google-chart chart="swapHistory" class="chart"></div>
+            <div history-chart chart="swapHistory" class="chart"></div>
         </div>
     </div>
 </div>
