--- a/src/html/partials/network.html
+++ b/src/html/partials/network.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="col-md-8 chart-container">
-            <div google-chart chart="data.history" class="chart"></div>
+            <div history-chart chart="data.history" class="chart"></div>
         </div>
     </div>
     
