--- a/src/html/partials/storage.html
+++ b/src/html/partials/storage.html
@@ -8,7 +8,7 @@
     
     <div class="row">
         <div class="col-md-12 chart-container">
-            <div google-chart chart="throughputHistory" class="chart"></div>
+            <div history-chart chart="throughputHistory" class="chart"></div>
         </div>
     </div>
     
