Dashboard: Working history graphs.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/css/style.css
+++ b/src/html/css/style.css
@@ -14,6 +14,13 @@
 .history-chart {
     height: 100%;
 }
+.history-container {
+    height: 100%;
+    padding-top: 1.5em;
+}
+.history-text {
+    position: absolute;
+}
 .graph-green {
     color: #109618;
 }
