--- a/src/html/partials/storage.html
+++ b/src/html/partials/storage.html
@@ -2,13 +2,13 @@
 
     <h1>Storage</h1>
 
-    <div google-chart chart="storageTable"></div>
+    <div google-chart chart="storageData.storageTable"></div>
     
     <h2>Throughput</h2>
     
     <div class="row">
         <div class="col-md-12 chart-container">
-            <div history-chart chart="throughputHistory" class="chart"></div>
+            <div history-chart chart="storageData.throughputHistory" class="chart"></div>
         </div>
     </div>
     
