--- a/src/html/partials/storage.html
+++ b/src/html/partials/storage.html
@@ -8,7 +8,9 @@
     
     <div class="row">
         <div class="col-md-12 chart-container">
-            <div history-chart chart="storageData.throughputHistory" class="chart"></div>
+            <div class="chart-container">
+                <div history-chart chart="storageData.throughputHistory" class="chart"></div>
+            </div>
         </div>
     </div>
     
