--- a/src/html/partials/cpu.html
+++ b/src/html/partials/cpu.html
@@ -13,22 +13,30 @@
             </ul>
         </div>
         
-        <div class="col-md-2 col-sm-3 chart-container">
-            <div google-chart chart="cpuData.usageGraph" class="chart"></div>
+        <div class="col-md-2 col-sm-3">
+            <div class="chart-container">
+                <div google-chart chart="cpuData.usageGraph" class="chart"></div>
+            </div>
         </div>
         
-        <div class="col-md-7 col-sm-12 chart-container">
-            <div history-chart chart="cpuData.usageHistory" class="chart"></div>
+        <div class="col-md-7 col-sm-12">
+            <div class="chart-container">
+                <div history-chart chart="cpuData.usageHistory" class="chart"></div>
+            </div>
         </div>
     </div>
     
     <h3>Temperature</h3>
     <div class="row">
-        <div class="col-md-5 col-sm-12 chart-container">
-            <div google-chart chart="cpuData.temperatureGauge" class="chart"></div>
+        <div class="col-md-5 col-sm-12">
+            <div class="chart-container">
+                <div google-chart chart="cpuData.temperatureGauge" class="chart"></div>
+            </div>
         </div>
         <div class="col-md-7 col-sm-12 chart-container">
-            <div history-chart chart="cpuData.temperatureHistory" class="chart"></div>
+            <div class="chart-container">
+                <div history-chart chart="cpuData.temperatureHistory" class="chart"></div>
+            </div>
         </div>
     </div>
 </div>
