Dashboard: Some html mistakes.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/partials/cpu.html
+++ b/src/html/partials/cpu.html
@@ -33,7 +33,7 @@
                 <div google-chart chart="cpuData.temperatureGauge" class="chart"></div>
             </div>
         </div>
-        <div class="col-md-7 col-sm-12 chart-container">
+        <div class="col-md-7 col-sm-12">
             <div class="chart-container">
                 <div history-chart chart="cpuData.temperatureHistory" class="chart"></div>
             </div>
