--- a/src/html/partials/storage.html
+++ b/src/html/partials/storage.html
@@ -7,7 +7,7 @@
     <h2>Throughput</h2>
     
     <div class="row">
-        <div class="col-md-12 chart-container">
+        <div class="col-md-12">
             <div class="chart-container">
                 <div history-chart chart="storageData.throughputHistory" class="chart"></div>
             </div>
