Dashboard: Fix storage history graph width.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/css/style.css
+++ b/src/html/css/style.css
@@ -18,6 +18,9 @@
     height: 100%;
     padding-top: 1.5em;
 }
+#storage-history-chart-container {
+    min-width: 630px;
+}
 .history-text {
     position: absolute;
 }
