--- a/src/html/partials/storage.html
+++ b/src/html/partials/storage.html
@@ -8,7 +8,7 @@
     
     <div class="row">
         <div class="col-md-12">
-            <div class="chart-container">
+            <div class="chart-container" id="storage-history-chart-container">
                 <div history-chart chart="storageData.throughputHistory" class="chart"></div>
             </div>
         </div>
