Dashboard: GPIO page created.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -6,19 +6,19 @@
     <div class="col-sm-3">
         <div class="panel panel-default">
             <div class="panel-heading"><b>CPU usage</b></div>
-            <div google-chart chart="cpuUsage" class="panel-body"></div>
+            <div google-chart chart="cpuUsage" class="panel-body mainpage-panel-body"></div>
         </div>
     </div>
     <div class="col-sm-5">
         <div class="panel panel-default">
             <div class="panel-heading"><b>RAM usage</b> (total: {{ramTotal.v | bytes}})</div>
-            <div google-chart chart="ramChart" class="panel-body"></div>
+            <div google-chart chart="ramChart" class="panel-body mainpage-panel-body"></div>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="panel panel-default">
             <div class="panel-heading"><b>CPU temperature</b></div>
-            <div google-chart chart="temperatureGauge" class="panel-body"></div>
+            <div google-chart chart="temperatureGauge" class="panel-body mainpage-panel-body"></div>
         </div>
     </div>
 </div>
@@ -27,7 +27,7 @@
     <div class="col-sm-5">
         <div class="panel panel-default">
             <div class="panel-heading"><b>Storage /</b> (total: {{storageRootTotalSize.v | bytes}})</div>
-            <div google-chart chart="storageRoot" class="panel-body"></div>
+            <div google-chart chart="storageRoot" class="panel-body mainpage-panel-body"></div>
         </div>
     </div>
 </div>
