--- a/src/html/partials/gpio.html
+++ b/src/html/partials/gpio.html
@@ -1,6 +1,6 @@
 <h1>GPIO</h1>
 
-<div class="row">
+<div class="row gpio">
     <div class="col-lg-2 col-sm-3" ng-repeat="pin in pins">
         <div class="panel panel-default">
         <div class="panel-heading"><b>Pin {{pin.id}}</b></div>
@@ -18,6 +18,10 @@
             <div class="form-group">
                 <label for="pin-{{pin.id}}-value">Value: </label>
                 <input type="number" id="pin-{{pin.id}}-value" min="0" max="{{pin.range}}" ng-model="pin.value" ng-change="pin.valueChange()" ng-readonly="pin.valueReadonly()" />
+            </div>
+            
+            <div class="form-group" ng-show="pin.toggleShow()">
+                <button type="button" class="btn btn-default" ng-click="pin.toggleClick()">Toggle</button>
             </div>
             
             <div class="form-group" ng-show="pin.rangeShow()">
