--- a/src/html/partials/spi.html
+++ b/src/html/partials/spi.html
@@ -4,28 +4,28 @@
 
     <div class="form-group">
         <label for="spi-bus" class="col-sm-2 control-label">Bus number</label>
-        <div class="col-sm-10">
-            <input type="number" id="spi-bus" min="0" max="1" ng-model="bus" ng-change="busChange()" required />
+        <div class="col-sm-1">
+            <input type="number" id="spi-bus" min="0" max="1" class="form-control" ng-model="bus" ng-change="busChange()" required />
         </div>
     </div>
 
     <div class="form-group"">
         <label for="spi-write" class="col-sm-2 control-label">Write</label>
-        <div class="col-sm-10">
-            <textarea rows="3" id="spi-write" ng-model="write" required></textarea>
+        <div class="col-sm-5">
+            <textarea rows="3" id="spi-write" class="form-control" ng-model="write" required></textarea>
         </div>
     </div>
 
     <div class="form-group"">
         <label for="spi-read" class="col-sm-2 control-label">Read</label>
-        <div class="col-sm-10">
-            <textarea rows="3" id="spi-read" ng-model="read" readonly></textarea>
+        <div class="col-sm-5">
+            <textarea rows="3" id="spi-read" class="form-control" ng-model="read" readonly></textarea>
         </div>
     </div>
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default" ng-click="buttonClick()">Write and read</button>
+            <button type="submit" class="btn btn-primary" ng-click="buttonClick()">Write and read</button>
         </div>
     </div>
 
@@ -36,8 +36,8 @@
 <form class="form-horizontal">
     <div class="form-group">
         <label for="spi-frequency" class="col-sm-2 control-label">Frequency</label>
-        <div class="col-sm-10">
-            <input type="number" id="spi-frequency" min="1" max="100000000" ng-model="frequency" ng-change="frequencyChange()" />
+        <div class="col-sm-2">
+            <input type="number" id="spi-frequency" min="1" max="100000000" class="form-control" ng-model="frequency" ng-change="frequencyChange()" />
         </div>
     </div>
 
