Dashboard: Corrected a few additional form formattings.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/partials/history.html
+++ b/src/html/partials/history.html
@@ -1,7 +1,7 @@
-<p class="history-text">
-    Show history for: 
-    <select ng-model="hg.graph" ng-options="graph.name for graph in hg.graphs"></select>
-</p>
+<div class="history-text form-inline">
+    <label>Show history for:</label>
+    <select class="form-control" ng-model="hg.graph" ng-options="graph.name for graph in hg.graphs"></select>
+</div>
 <div class="history-container">
     <div google-chart chart="hg.graph" class="history-chart"></div>
 </div>
