Dashboard: Main page is now modular.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,33 +1,10 @@
 <h1>RPi Dashboard</h1>
 
 <p>Welcome to RPi Dashboard! To access detailed information, choose a category in the menu above.</p>
+<p ng-hide="loggedIn">You are not logged in, <a href="#/login">click here to login</a>.</p>
 
 <div class="row">
-    <div class="col-sm-3">
-        <div class="panel panel-default">
-            <div class="panel-heading"><b>CPU usage</b></div>
-            <div google-chart chart="cpuUsage" class="panel-body mainpage-panel-body"></div>
-        </div>
-    </div>
-    <div class="col-sm-5">
-        <div class="panel panel-default">
-            <div class="panel-heading"><b>RAM usage</b> (total: {{ramTotal.v | bytes}})</div>
-            <div google-chart chart="ramChart" class="panel-body mainpage-panel-body"></div>
-        </div>
-    </div>
-    <div class="col-sm-4">
-        <div class="panel panel-default">
-            <div class="panel-heading"><b>CPU temperature</b></div>
-            <div google-chart chart="temperatureGauge" class="panel-body mainpage-panel-body"></div>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-sm-5">
-        <div class="panel panel-default">
-            <div class="panel-heading"><b>Storage /</b> (total: {{storageRootTotalSize.v | bytes}})</div>
-            <div google-chart chart="storageRoot" class="panel-body mainpage-panel-body"></div>
-        </div>
+    <div ng-repeat="widget in widgets" class="col-sm-{{widget.width}}" ng-controller="widget.controller">
+        <div ng-include="widget.partial" class="panel panel-default"></div>
     </div>
 </div>
