Dashboard: Added pinout images to GPIO.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/partials/gpio.html
+++ b/src/html/partials/gpio.html
@@ -1,3 +1,6 @@
+<p><button type="button" class="btn btn-default" ng-hide="pinoutImageSource" ng-click="pinoutLoad()">{{pinoutButtonText}}</button></p>
+<p ng-show="pinoutImageSource"><img ng-src="{{pinoutImageSource}}" class="img-responsive" /></p>
+<p ng-show="pinoutSecondarySource"><img ng-src="{{pinoutSecondarySource}}" class="img-responsive" /></p>
 <div class="row gpio">
     <div class="col-lg-2 col-sm-3" ng-repeat="pin in pins">
         <div class="panel panel-default">
