Dashboard: Removed some unnecessary complication in gpio.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/partials/gpio.html
+++ b/src/html/partials/gpio.html
@@ -1,4 +1,4 @@
-<p><button type="button" class="btn btn-default" ng-hide="pinoutImageSource" ng-click="pinoutLoad()">{{pinoutButtonText}}</button></p>
+<p><button type="button" class="btn btn-default" ng-hide="pinoutImageSource" ng-click="pinoutLoad()">Show pinout</button></p>
 <p ng-show="pinoutImageSource"><img ng-src="{{pinoutImageSource}}" class="img-responsive" /></p>
 <p ng-show="pinoutSecondarySource"><img ng-src="{{pinoutSecondarySource}}" class="img-responsive" /></p>
 <div class="row gpio">
