--- a/src/html/partials/widgets/cpu-temp.html
+++ b/src/html/partials/widgets/cpu-temp.html
@@ -1,2 +1,2 @@
-<div class="panel-heading"><b>CPU temperature</b></div>
-<div google-chart class="panel-body mainpage-panel-body" chart="temperatureGauge"></div>
+<div class="panel-heading main-panel-heading"><b>CPU temperature</b></div>
+<div google-chart class="panel-body main-panel-body" chart="temperatureGauge"></div>
