--- a/src/html/partials/widgets/general.html
+++ b/src/html/partials/widgets/general.html
@@ -1,5 +1,5 @@
-<div class="panel-heading"><b>General</b></div>
-<div class="panel-body mainpage-panel-body">
+<div class="panel-heading main-panel-heading"><b>General</b></div>
+<div class="panel-body main-panel-body">
     <p><b>Uptime:</b><br />
         {{uptime | time}}</p>
     <p><b>Board rev.:</b><br />
