--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -3,7 +3,7 @@
 <p>Welcome to RPi Dashboard! To access detailed information, choose a category in the menu above.</p>
 <p ng-hide="loggedIn">You are not logged in, <a href="#/login">click here to login</a>.</p>
 
-<div class="row">
+<div class="row" id="main-sort">
     <div ng-repeat="widget in widgets" class="col-sm-{{widget.width}}" ng-controller="widget.controller">
         <div ng-include="widget.partial" class="panel panel-default"></div>
     </div>
