--- a/src/html/partials/widgets/cpu-usage.html
+++ b/src/html/partials/widgets/cpu-usage.html
@@ -1,2 +1,2 @@
-<div class="panel-heading"><b>CPU usage</b></div>
-<div google-chart class="panel-body mainpage-panel-body" chart="cpuUsage"></div>
+<div class="panel-heading main-panel-heading"><b>CPU usage</b></div>
+<div google-chart class="panel-body main-panel-body" chart="cpuUsage"></div>
