--- a/src/html/partials/widgets/ram-usage.html
+++ b/src/html/partials/widgets/ram-usage.html
@@ -1,2 +1,2 @@
-<div class="panel-heading"><b>RAM usage</b> (total: {{ramTotal.v | bytes}})</div>
-<div google-chart chart="ramChart" class="panel-body mainpage-panel-body"></div>
+<div class="panel-heading main-panel-heading"><b>RAM usage</b> (total: {{ramTotal.v | bytes}})</div>
+<div google-chart chart="ramChart" class="panel-body main-panel-body"></div>
