--- a/src/html/partials/widgets/storage.html
+++ b/src/html/partials/widgets/storage.html
@@ -1,2 +1,2 @@
-<div class="panel-heading"><b>Storage /</b> (total: {{storageRootTotalSize.v | bytes}})</div>
-<div google-chart chart="storageRoot" class="panel-body mainpage-panel-body"></div>
+<div class="panel-heading main-panel-heading"><b>Storage /</b> (total: {{storageRootTotalSize.v | bytes}})</div>
+<div google-chart chart="storageRoot" class="panel-body main-panel-body"></div>
