Dashboard: Added css compress.
Signed-off-by: matematik7 <domen.ipavec@z-v.si>

--- a/src/html/css/style.css
+++ b/src/html/css/style.css
@@ -1,55 +1,2 @@
-.chart-container {
-    padding-bottom: 30%;
-    min-height: 300px;
-    position: relative;
-}
-.chart {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-}
-.history-chart {
-    height: 100%;
-}
-.history-container {
-    height: 100%;
-    padding-top: 2em;
-}
-#storage-history-chart-container {
-    min-width: 550px;
-}
-.history {
-    position: absolute;
-}
-.history-select {
-    display: inline-block;
-    width: auto;
-    vertical-align: middle;
-}
-.graph-green {
-    color: #109618;
-}
-.graph-red {
-    color: #dc3912;
-}
-.graph-orange {
-    color: #ff9900;
-}
-.graph-blue {
-    color: #3366cc;
-}
-.gpio .panel {
-    min-height: 22em;
-}
-.main-placeholder {
-    background: #eee;
-    border: dashed 1px #777;
-    height: 293px;
-    margin-bottom: 20px;
-}
-.main-panel-heading {
-    cursor: move;
-}
-.main-panel-body {
-    height: 250px;
-}
+body{padding-bottom:40px;background-color:#eee}.form-signin{max-width:330px;padding:15px;margin:0 auto}.form-signin .form-signin-heading,.form-signin .checkbox{margin-bottom:10px}.form-signin .checkbox{font-weight:normal}.form-signin .form-control{position:relative;height:auto;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;padding:10px;font-size:16px}.form-signin .form-control:focus{z-index:2}.form-signin input[type="email"]{margin-bottom:-1px;border-bottom-right-radius:0;border-bottom-left-radius:0}.form-signin input[type="password"]{margin-bottom:10px;border-top-left-radius:0;border-top-right-radius:0}.pointer{cursor:pointer}
+.chart-container{padding-bottom:30%;min-height:300px;position:relative}.chart{width:100%;height:100%;position:absolute}.history-chart{height:100%}.history-container{height:100%;padding-top:2em}#storage-history-chart-container{min-width:550px}.history{position:absolute}.history-select{display:inline-block;width:auto;vertical-align:middle}.graph-green{color:#109618}.graph-red{color:#dc3912}.graph-orange{color:#f90}.graph-blue{color:#36c}.gpio .panel{min-height:22em}.main-placeholder{background:#eee;border:dashed 1px #777;height:293px;margin-bottom:20px}.main-panel-heading{cursor:move}.main-panel-body{height:250px}
